--- a/src/core/components/card/card.styles.scss
+++ b/src/core/components/card/card.styles.scss
@@ -1,13 +1,39 @@
 .card-wrapper {
     height: auto;
-
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
 
+    box-shadow: 0 4px 8px 0 #00000033;
+    transition: 0.3s;
+
+    border-radius: 5px;
+
+    cursor: pointer;
+
+    &:hover {
+        box-shadow: 0 8px 16px 0 #00000033;
+    }
+
     .card-image {
+        border-radius: inherit;
         width: 100%;
         height: 100%;
+        box-shadow: 0px 20px 45px 0px #00000033;
+    }
+
+    .card-short-details {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        padding: 10px;
+
+        font-size: 18px;
+
+        .card-name {
+            font-weight: 600;
+        }
     }
 }
