--- a/src/core/components/grid/grid-types/grid-block/grid-block.styles.scss
+++ b/src/core/components/grid/grid-types/grid-block/grid-block.styles.scss
@@ -1,6 +1,17 @@
 .grid-block-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(25%, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     column-gap: 20px;
-    row-gap: 0.5%;
+    row-gap: 20px;
+}
+
+.grid-block-title {
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 34px;
+    font-weight: 600;
 }
