--- a/src/core/components/grid/grid.styles.scss
+++ b/src/core/components/grid/grid.styles.scss
@@ -3,5 +3,8 @@
     flex-direction: column;
     width: auto;
     height: auto;
-    padding: 2% 2%;
+    padding: 2%;
+    padding-top: unset;
+
+    // overflow: hidden;
 }
