--- a/src/core/components/header/header.styles.scss
+++ b/src/core/components/header/header.styles.scss
@@ -6,17 +6,16 @@
         width: 100%;
         height: 10vh;
         padding: 0px 15px 0px 15px;
-        background-color: #222222;
-        @include mixins.flex-disp("row", "center", "flex-start");
+        // background-color: #222222;
+        background-image: linear-gradient(to left, #020202, #777373);
+        @include mixins.flex-disp(row, center, flex-start);
         box-shadow: 5px 10px 18px #888888;
-        position: fixed;
-        top: 0;
-        z-index: 5;
     }
 
     &-title-wrap {
-        margin-top: -10px;
-        @include mixins.flex-disp("row", "center", "flex-start");
+        width: 100%;
+        margin-top: -15px;
+        @include mixins.flex-disp(row, center, space-between);
 
         &-img {
             height: 70px;
@@ -28,7 +27,7 @@
             margin-top: 8px;
             font-size: 24px;
             font-weight: 400;
-            color: #ee700a;
+            color: #dad3ce;
 
             display: flex;
             flex-direction: row;
