--- a/src/core/components/grid/grid-types/grid-block/grid-block.styles.scss
+++ b/src/core/components/grid/grid-types/grid-block/grid-block.styles.scss
@@ -1,6 +1,6 @@
 .grid-block-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     column-gap: 20px;
     row-gap: 20px;
 }
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 
     font-size: 34px;
     font-weight: 600;
