--- a/src/core/components/header/header.styles.scss
+++ b/src/core/components/header/header.styles.scss
@@ -7,7 +7,7 @@
         height: 10vh;
         padding: 0px 15px 0px 15px;
         // background-color: #222222;
-        background-image: linear-gradient(to left, #020202, #777373);
+        background-image: linear-gradient(to left, #020202, #7c7c7c);
         @include mixins.flex-disp(row, center, flex-start);
         box-shadow: 5px 10px 18px #888888;
     }
@@ -20,6 +20,7 @@
         &-img {
             height: 70px;
             background-position-y: -2px;
+            cursor: pointer;
         }
 
         &-label-text {
