Code cleansing and style updates.

--- a/src/core/components/page-loader/page-loader.styles.scss
+++ b/src/core/components/page-loader/page-loader.styles.scss
@@ -1,14 +1,12 @@
+@use "../../styles/mixins";
 
 .loader-container {
     position: fixed;
     top: 0;
-    display: flex;
-    flex-flow: row;
-    align-items: center;
-    justify-content: center;
+    @include mixins.flex-disp(row, center, center);
     height: 100%;
     width: 100%;
-    z-index: 8; // 2;
+    z-index: 8;
 
     .loader {
         z-index: 6;
