--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@use "./core/styles/mixins";
+
 * {
   box-sizing: border-box;
 }
@@ -38,13 +40,9 @@
 } */
 
 .App-header {
-  // background-color: #1c1c1d;
   background-image: linear-gradient(to left, #020202, rgb(34, 30, 30));
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  @include mixins.flex-disp(column, center, center);
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -73,21 +71,14 @@
 .overlay-container {
   position: fixed;
   top: 0;
-  display: flex;
-  flex-flow: row;
-  align-items: center;
-  justify-content: center;
+  @include mixins.flex-disp(row, center, center);
   background-color: rgb(14, 13, 13);
   height: 100%;
   width: 100%;
   opacity: 0.75;
-  z-index: 4; // 6; // 2;
+  z-index: 4;
 
   &.loading {
-    z-index: 6; // 2;
-  }
-
-  &.file-preview {
-    opacity: 0.9;
+    z-index: 6;
   }
 }
