--- a/src/core/components/header/header.styles.scss
+++ b/src/core/components/header/header.styles.scss
@@ -1,4 +1,3 @@
-// @import url("../../styles/mixins.styles.scss");
 @use "../../styles/mixins";
 
 .header {
@@ -6,7 +5,6 @@
         width: 100%;
         height: 10vh;
         padding: 0px 15px 0px 15px;
-        // background-color: #222222;
         background-image: linear-gradient(to left, #020202, #7c7c7c);
         @include mixins.flex-disp(row, center, flex-start);
         box-shadow: 5px 10px 18px #888888;
@@ -29,11 +27,7 @@
             font-size: 24px;
             font-weight: 400;
             color: #dad3ce;
-
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-
+            @include mixins.flex-align(row, center);
             letter-spacing: 5px;
         }
     }
