--- a/src/core/components/grid/grid.styles.scss
+++ b/src/core/components/grid/grid.styles.scss
@@ -5,6 +5,23 @@
     height: auto;
     padding: 2%;
     padding-top: unset;
-
     // overflow: hidden;
+
+    &-title {
+        height: 100px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-start;
+
+        font-size: 34px;
+        font-weight: 600;
+    }
+
+    &-block {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        column-gap: 20px;
+        row-gap: 20px;
+    }
 }
