Error handling updates with react-error-boundary package.

--- a/src/core/components/card/card.styles.scss
+++ b/src/core/components/card/card.styles.scss
@@ -23,6 +23,7 @@
         @include mixins.flex-align(column, flex-start);
         padding: 10px;
         font-size: 18px;
+        width: 100%;
 
         .card-name {
             font-weight: 600;
