--- a/src/App.scss
+++ b/src/App.scss
@@ -29,7 +29,7 @@
 }
 
 .App-logo {
-  height: 14vmin;
+  height: 25vmin;
   pointer-events: none;
 }
 
@@ -48,14 +48,15 @@
 }
 
 .App-link {
-  color: #ee700a;
+  color: #ffffff;
   cursor: pointer;
   font-weight: 400;
   text-decoration: none;
+  padding-top: 10px;
 
   &:hover {
     font-weight: 600;
-    color: #ffffff;
+    color: #6969c5;
   }
 }
 
