--- a/src/App.scss
+++ b/src/App.scss
@@ -33,14 +33,8 @@
   pointer-events: none;
 }
 
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} */
-
 .App-header {
-  background-image: linear-gradient(to left, #020202, rgb(34, 30, 30));
+  background-image: linear-gradient(to left, #020202, #3a3636);
   min-height: 100vh;
   @include mixins.flex-disp(column, center, center);
   font-size: calc(10px + 2vmin);
@@ -53,19 +47,12 @@
   font-weight: 400;
   text-decoration: none;
   padding-top: 10px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #ffffff;
 
   &:hover {
-    font-weight: 600;
     color: #6969c5;
-  }
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+    border-bottom: 1px solid #6969c5;
   }
 }
 
@@ -80,6 +67,19 @@
   z-index: 4;
 
   &.loading {
+    z-index: 6;
+  }
+}
+
+.loader-box {
+  position: fixed;
+  top: 0;
+  @include mixins.flex-disp(row, center, center);
+  height: 100%;
+  width: 100%;
+  z-index: 8;
+
+  .loader {
     z-index: 6;
   }
 }
