--- a/src/core/components/body/body.styles.scss
+++ b/src/core/components/body/body.styles.scss
@@ -3,6 +3,6 @@
     height: 100%;
     position: relative;
     padding: 35px;
-    padding-top: unset;
-    overflow-y: auto;
+    padding-top: 10vh;
+    // overflow-y: auto;
 }
