--- a/src/core/components/grid/grid.styles.scss
+++ b/src/core/components/grid/grid.styles.scss
@@ -5,7 +5,6 @@
     height: auto;
     padding: 2%;
     padding-top: unset;
-    // overflow: hidden;
 
     &-title {
         height: 100px;
@@ -13,9 +12,13 @@
         flex-direction: row;
         align-items: center;
         justify-content: flex-start;
+        letter-spacing: 2.5px;
 
         font-size: 34px;
         font-weight: 600;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+            "Helvetica Neue", sans-serif;
+        color: #575555;
     }
 
     &-block {
