--- a/src/core/components/header/header.styles.scss
+++ b/src/core/components/header/header.styles.scss
@@ -5,8 +5,12 @@
         width: 100%;
         height: 10vh;
         padding: 0px 15px 0px 15px;
-        background-image: linear-gradient(to left, #020202, #7c7c7c);
+        background: #bcc3c3;
+        background: linear-gradient(90deg, #bcc3c3 0%, #2e3e44 40%, #0b0b0b 98%);
         @include mixins.flex-disp(row, center, flex-start);
+        position: fixed;
+        top: 0;
+        z-index: 5;
         box-shadow: 5px 10px 18px #888888;
     }
 
